2010-01-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_amarok2.c (ol_player_amarok2_get_controller): FIX: Issue 49, infinite recursion when getting status of amarok

2010-01-21  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: ADD: Outline width property for OSD Window

2010-01-19  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_debug.h (ol_logf): CHANGE: Issue 44, a workaround to print debug messages to stdout to avoid output to .xsession-errors

	* src/ol_player_mpd.c (ol_player_mpd_init): FIX: Issue 42, connect to MPD successfully but report failed. Thanks to sightok.net

2010-01-18  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_xmms2.c: FIX: Backward compatibility of old XMMS2 versions without xmmsv_t
	FIX: Compatible with new xmms_playback_seek_ms with whence parameter

2010-01-09  Tiger Soldier  <tigersoldi@gmail.com>

	* configure.ac: New Release

	* src/ol_utils_cmdline.c: ADD: Command line utilities

	* src/ol_player_moc.c: ADD: MOC support

2010-01-08  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c (check_music_change): FIX: issue 40. Music change check failed when a music with its title unset.

	* src/ol_utils.c : Add ol_strptrcpy and ol_streq.

2010-01-07  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_path_manage.h: Change the return value from size_t to int, since size_t is unsigned but we need to return -1

	* src/ol_main.c (for_each_lrc_pattern): FIX: issue 39, the pattern expanding failure is ignored due to type casting.

2010-01-06  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_xmms2.c: ADD: XMMS2 support

2010-01-05  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_exaile03.c: FIX: issue 34, getting music info in Exaile will not return false when lack of artist.

2010-01-04  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: FIX: issue 35, create lyrics directory on downloading if not exists.

2009-12-27  Tiger Soldier  <tigersoldi@gmail.com>
